--- a/apps/cryptfolio/src/app/app.component.html
+++ b/apps/cryptfolio/src/app/app.component.html
@@ -1,4 +1,3 @@
-
 <div style="text-align:center">
   <h1>Welcome to projects!</h1>
   <img width="300" src="https://raw.githubusercontent.com/nrwl/nx/master/nx-logo.png">
@@ -6,9 +5,8 @@
 
 <h2>This is an Angular CLI app built with Nrwl Nx!</h2>
 
-An open source toolkit for enterprise Angular applications.
-
-Nx is designed to help you create and build enterprise grade Angular applications. It provides an opinionated approach to application project structure and patterns.
+An open source toolkit for enterprise Angular applications. Nx is designed to help you create and build enterprise grade Angular applications.
+It provides an opinionated approach to application project structure and patterns.
 
 <h2>Quick Start & Documentation</h2>
 
