Implemented loading mask for portfolio data

--- a/libs/cryptfolio/portfolio/src/lib/components/entries/entries.component.html
+++ b/libs/cryptfolio/portfolio/src/lib/components/entries/entries.component.html
@@ -1,8 +1,4 @@
-<div *ngFor="let entry of entries">
-  <pflo-entry [entry]=entry></pflo-entry>
-</div>
-
-<clr-datagrid>
+<clr-datagrid [clrDgLoading]="loading">
   <clr-dg-column>Id</clr-dg-column>
   <clr-dg-column>Amount</clr-dg-column>
   <clr-dg-column>Price</clr-dg-column>
