Added currency to the state

--- a/libs/cryptfolio/portfolio/src/lib/components/entries/entries.component.html
+++ b/libs/cryptfolio/portfolio/src/lib/components/entries/entries.component.html
@@ -1,12 +1,14 @@
 <clr-datagrid [clrDgLoading]="loading">
-  <clr-dg-column>Id</clr-dg-column>
+  <clr-dg-column>Name</clr-dg-column>
   <clr-dg-column>Amount</clr-dg-column>
-  <clr-dg-column>Price</clr-dg-column>
+  <clr-dg-column>Purchase Price</clr-dg-column>
+  <clr-dg-column>Current Price</clr-dg-column>
 
   <clr-dg-row *ngFor="let entry of entries">
-    <clr-dg-cell>{{entry.id}}</clr-dg-cell>
+    <clr-dg-cell>{{entry.name}}</clr-dg-cell>
     <clr-dg-cell>{{entry.amount}}</clr-dg-cell>
     <clr-dg-cell>{{entry.price}}</clr-dg-cell>
+    <clr-dg-cell>{{entry.quote.price}}</clr-dg-cell>
   </clr-dg-row>
 
   <clr-dg-footer>{{entries.length}} Purchases</clr-dg-footer>
