Added portfolio actions component

--- a/libs/cryptfolio/portfolio/src/lib/containers/portfolio/portfolio.component.html
+++ b/libs/cryptfolio/portfolio/src/lib/containers/portfolio/portfolio.component.html
@@ -1,1 +1,8 @@
-<pflo-entries *ngIf='(portfolioEntries$ | async); let entries' [entries]='entries.data' [loading]='entries.loading'></pflo-entries>
+<div class="main-container">
+  <div class="content-container">
+    <div class="content-area">
+      <pflo-entries *ngIf='(portfolioEntries$ | async); let entries' [entries]='entries.data' [loading]='entries.loading'></pflo-entries>
+      <pflo-actions></pflo-actions>
+    </div>
+  </div>
+</div>
