--- a/libs/cryptfolio/portfolio/src/lib/components/add-edit-entry/add-edit-entry.component.html
+++ b/libs/cryptfolio/portfolio/src/lib/components/add-edit-entry/add-edit-entry.component.html
@@ -4,6 +4,21 @@
     <form class="form" [formGroup]="formGroup" (ngSubmit)="submit()">
       <section class="form-block">
         <div class="form-group">
+          <label for="coinId" class="required">Coin</label>
+          <label for="coinId" aria-haspopup="true" role="tooltip" class="tooltip tooltip-validation tooltip-sm" [class.invalid]="formGroup.get('coinId').invalid
+                            && (formGroup.get('coinId').dirty || formGroup.get('coinId').touched)">
+            <div class="select">
+              <select id="coinId" formControlName="coinId">
+                <option *ngFor="let coin of coins" [ngValue]=coin.id>{{coin.name}} ({{coin.symbol}})</option>
+              </select>
+
+            </div>
+            <span class="tooltip-content">
+              Coin is required.
+            </span>
+          </label>
+        </div>
+        <div class="form-group">
           <label for="amount" class="required">Amount</label>
           <label for="amount" aria-haspopup="true" role="tooltip" class="tooltip tooltip-validation tooltip-sm" [class.invalid]="formGroup.get('amount').invalid
                             && (formGroup.get('amount').dirty || formGroup.get('amount').touched)">
@@ -26,7 +41,7 @@
       </section>
       <div class="modal-footer">
         <button class="btn btn-secondary" type="button" (click)="close()">Cancel</button>
-        <button class="btn btn-primary">Add</button>
+        <button class="btn btn-primary" [disabled]=formGroup.invalid>Add</button>
       </div>
     </form>
   </div>
