--- a/libs/cryptfolio/portfolio/src/lib/containers/portfolio/portfolio.component.html
+++ b/libs/cryptfolio/portfolio/src/lib/containers/portfolio/portfolio.component.html
@@ -3,7 +3,7 @@
     <div class="content-area">
       <pflo-entries *ngIf='(portfolioEntries$ | async); let entries' [entries]='entries.data' [loading]='entries.loading' [(selected)]=selected></pflo-entries>
       <pflo-actions [selectionCount]='selected.length' (addClick)='addClick()' (editClick)='editClick()' (deleteClick)='deleteClick()'></pflo-actions>
-      <pflo-add-edit-entry [(open)]=addEdit [coins]="coinList$ | async"></pflo-add-edit-entry>
+      <pflo-add-edit-entry [(open)]=addEdit [coins]="coinList$ | async" (entrySubmitted)="addSubmit($event)"></pflo-add-edit-entry>
     </div>
   </div>
 </div>
