--- a/libs/cryptfolio/portfolio/src/lib/components/entries/entries.component.html
+++ b/libs/cryptfolio/portfolio/src/lib/components/entries/entries.component.html
@@ -1,4 +1,4 @@
-<clr-datagrid [clrDgLoading]="loading" [(clrDgSelected)]="selected" [clDgRowSelection]="true">
+<clr-datagrid [clrDgLoading]="loading" [(clrDgSingleSelected)]="selected" [clDgRowSelection]="true">
   <clr-dg-column [clrDgField]="'name'">Name</clr-dg-column>
   <clr-dg-column [clrDgField]="'amount'">Amount</clr-dg-column>
   <clr-dg-column [clrDgField]="'price'">Purchase Price</clr-dg-column>
