--- a/libs/cryptfolio/portfolio/src/lib/containers/portfolio/portfolio.component.html
+++ b/libs/cryptfolio/portfolio/src/lib/containers/portfolio/portfolio.component.html
@@ -2,7 +2,7 @@
   <div class="content-container">
     <div class="content-area">
       <pflo-entries [entries]='portfolioEntries$ | async' [loading]='entriesLoading$ | async' [(selected)]=selected></pflo-entries>
-      <pflo-actions [selectionCount]='selected ? 1 : 0' (addClick)='addClick()' (editClick)='editClick()' (deleteClick)='deleteClick()'></pflo-actions>
+      <pflo-actions [selectionCount]='selected ? 1 : 0' (addClick)='addEditClick()' (editClick)='addEditClick(selected)' (deleteClick)='deleteClick()'></pflo-actions>
       <pflo-add-edit-entry [(open)]=showAddEdit [coins]="coinList$ | async" (entrySubmitted)="addSubmit($event)" [purchase]=purchaseToEdit></pflo-add-edit-entry>
       <pflo-delete-entry [(open)]=showDelete (deleteSubmitted)="deleteSubmit()"></pflo-delete-entry>
     </div>
